Implemented a feature to save the games session. Also added a button to restart the game manually.

--- a/rpg.html
+++ b/rpg.html
@@ -42,6 +42,7 @@
     </div>
     <div class="testmode">
       <button id="testmode" type="button">Test Mode</button>
+      <button id="resetGame" type="button">Reset Game</button>
     </div>
     <img id="playerImage" src="img/intro.jpg" style="display: block;">
   </div>
